# MPC4quantum

./: README.rst  pyproject.toml
mpc4quantum/: __init__.py  experiment.py  lifting.py  linearize.py  lqr.py  model.py  mpc.py  optimization.py  optimize.py  vectorization.py  vectorize.py
tests/: __init__.py  test_mpc4quantum.py  train_model.py  util_qubits.py  util_training.py
